k8s/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: receitas-app
spec:
  stripPrefix:
    prefixes:
      - /api
