k8s/app/receitas-app.yml
apiVersion: v1
kind: Namespace

metadata:
  name: receitas-app

  labels:
    app: receitas-app
    environment: development
    managed-by: kubernetes
  annotations:
    argocd.argoproj.io/sync-wave: "0"
