k8s/app/argocd-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-lb
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 443
      name: https
  selector:
    app.kubernetes.io/name: argocd-server
