k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receitas-app
  namespace: receitas-app
  labels:
    tier: backend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    description: "Backend app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receitas-app
  template:
    metadata:
      labels:
        app: receitas-app
    spec:
      containers:
        - name: receitas-app-backend
          image: ghcr.io/jaimecabrito01/api-receitas-backend:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
            seccompProfile:
              type: Unconfined

          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jwt-keys
              mountPath: /etc/jwt
              readOnly: true
      volumes:
        - name: jwt-keys
          secret:
            secretName: jwt-keys
---
apiVersion: v1
kind: Service
metadata:
  name: receitas-app-service
  namespace: receitas-app
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: receitas-app
