k8s/app/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receitas-app-frontend
  namespace: receitas-app
  labels:
    tier: frontend
  annotations:
    description: "Frontend app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: receitas-app-frontend
  template:
    metadata:
      labels:
        app: receitas-app-frontend
    spec:
      containers:
        - name: receitas-app-frontend
          image: ghcr.io/jaimecabrito01/api-receitas-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: receitas-app-frontend-service
  namespace: receitas-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: receitas-app-frontend
