k8s/app/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  entryPoints:
    - argocd
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport
