k8s/app/ingressroute-backend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: receitas-backend
  namespace: receitas-app
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: strip-api
      services:
        - name: receitas-app-service
          port: 8080
