k8s/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: receitas-app-ingress
  namespace: receitas-app
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - name: receitas-app-frontend-service
          port: 80
